# lockin-calendar

./: .gitignore  README.md  pyproject.toml
src/django_lockincalendar/: asgi.py  manage.py  settings.py  wsgi.py
src/django_lockincalendar/accounts/: admin.py  forms.py  models.py  views.py
src/django_lockincalendar/accounts/migrations/: 0001_initial.py  0002_rename_customuser_lockinuser.py  0003_remove_lockinuser_username_and_more.py  0004_remove_lockinuser_user_photo.py  0005_lockinuser_user_photo.py  0006_alter_lockinuser_lockin_activities_lockinactivity_and_more.py  0007_alter_lockinuser_managers.py  0008_alter_lockinuser_managers.py  0009_alter_lockinuser_managers_and_more.py
src/django_lockincalendar/django_lockincalendar/: settings.py  urls.py
