[project]
name = "lockin-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.2",
    "dotenv>=0.9.9",
    "pillow>=12.1.1",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
prod = [
    "gunicorn>=25.1.0",
]
